# Notion-Inbox-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  test_notion_task_creation.py
inbox_agent/: artifact_logger.py  config.py  enrichment.py  logging_context.py  metadata.py  notion.py  pydantic_models.py  ranking.py  setup.py  task.py  utils.py
notebooks/: evaluate.ipynb
scripts/: evaluate_ranking_isolated.py
tests/: README.md  conftest.py  test_config.py  test_metadata.py  test_notion.py  test_pipeline_integration.py  test_task.py  test_task_properties.py  test_toggle_blocks_integration.py  test_utils.py
